package com.ranni.connector.http.request;

/**
 * Title: HttpServer
 * Description:
 * 这个的作用就是请求头解析，相当于v0.0.1的HttpHeader类
 *
 * @Author 2Executioner
 * @Email 1205878539@qq.com
 * @Date 2022-03-21 23:06
 */
public final class HttpRequestImpl extends HttpRequestBase {
}
