@startuml

title v0.0.2 request UML图
interface Request
interface javax.servlet.ServletRequest
interface javax.servlet.http.HttpServletRequest
interface HttpRequest
abstract class javax.servlet.ServletInputStream
abstract class RequestBase
class HttpRequestBase
class HttpRequestImpl
class HttpRequestFacade
class RequestFacade
class RequestStream

Request <|-- HttpRequest
javax.servlet.ServletRequest <|-- javax.servlet.http.HttpServletRequest
RequestBase <|-- HttpRequestBase
HttpRequestBase <|-- HttpRequestImpl
RequestFacade <|-- HttpRequestFacade
Request <|.. RequestBase
javax.servlet.ServletRequest <|.. RequestBase
HttpRequest <|.. HttpRequestBase
javax.servlet.http.HttpServletRequest <|.. HttpRequestBase
javax.servlet.ServletRequest <|.. RequestFacade
javax.servlet.http.HttpServletRequest <|.. HttpRequestFacade
javax.servlet.ServletInputStream <|.. RequestStream
RequestBase "1" *-- "1" RequestStream

@enduml